# ScanExam

./: .gitignore  ESTRUCTURA_PROYECTO.md  README.md  ScanExam_linea_base_v7.md  ScanExam_linea_base_v8.md  docker-compose.yml  main.py  mise.toml  pyproject.toml  requirements.txt  run_scanexam.bat
.github/: CODEOWNERS
app/: api.py  app.xml  classify.py  config.py  core_classifier.py  core_pipeline.py  core_vision.py  crops.py  identity.py  run_pruebas.py  scoring_engine.py  template_loader.py  test_api.py  test_classify.py  test_core_pipeline.py  test_core_vision.py  test_crops.py  test_identity.py  test_scoring_engine.py  train_classifier.py
app/dataset_builder/: build_variant.py  crear_dataset.py  crear_dataset_old.py
app/utilitarios/: generar_ficha_sintetica.py
docker/: app.Dockerfile  requirements-app.txt  requirements-dev.txt
docs/: ARQUITECTURA.md  DEMO.md  INTEGRACION.md  decision_not_support_for_A_B_exams.md
docs/adr/: 0001-motor-de-reglas-en-python.md  0002-paralelismo-en-python.md  0003-versionado-del-modelo-con-mlflow.md  0004-cli-por-fases-y-orquestacion-n8n.md  0005-panel-docente-stub-minimo.md  0006-contenerizacion-y-entorno.md  0007-confidence-por-pregunta.md  0008-reconstruccion-codigo-estudiante.md  0009-notificacion-email-en-panel.md  0010-permisos-volumen-compartido.md  README.md
models/: README.md
n8n_workflows/: scanexam_flujo_principal.json
notebooks/: clasificador_burbujas.ipynb
panel_docente/: main.py  test_panel.py
scan-exam-panel/backend/: go.mod  (+5 more)
templates/: base.html  index.html
tests/: test_api.py  test_core_vision.py
(+95 files in other folders)
