[project]
name = "scanexam"
version = "8.0.0"
description = "ScanExam AI - Corrección automática de exámenes con IA"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Framework Web & API 
    "fastapi==0.110.0",
    "uvicorn[standard]==0.28.0",
    "python-multipart==0.0.9",
    "jinja2==3.1.6",

    # Visión por Computadora & IA 
    "torch==2.2.2",
    "torchvision==0.17.2",
    "opencv-python-headless==4.9.0.80",
    "pillow==10.2.0",
    "scikit-learn==1.4.2",

    # Procesamiento de Datos & Reportes Excel
    "pandas==2.2.2",
    "openpyxl==3.1.2",
    "numpy==1.26.4",
]

[dependency-groups]
dev = [
    "pytest==8.0.0",
    "ipykernel==6.29.0",
    "jupyterlab==4.1.0",
    "debugpy==1.8.0",
]